# COMP0225_LRC_stack

./: .gitignore  .gitmodules  CONTEXT_HANDOFF.md  README.md  REPRO.md  WALKTHROUGH.md  cmu_env.yml  send_goal.sh  setup_cmu_env.bash  start_exploration.sh
src/go2_gazebo_sim/: CMakeLists.txt  package.xml
src/go2_gazebo_sim/config/nav/: geometric_frontier_dual.yaml  reactive_nav_dual.yaml
src/go2_gazebo_sim/config/ros_control/: ros_control_robot_a.yaml  ros_control_robot_b.yaml
src/go2_gazebo_sim/config/slam/: pointlio_gazebo.yaml
src/go2_gazebo_sim/docs/: runtime_contracts.md
src/go2_gazebo_sim/launch/: _stack_components.py  cmu_autonomy.launch.py  full_autonomy.launch.py  go2_l_corridor.launch.py  l_corridor.launch.py  simple_autonomy.launch.py  spawn_only.launch.py  test_pointlio.launch.py  test_pointlio_autonomy.launch.py  two_go2_t_world_autonomy.launch.py
src/go2_gazebo_sim/scripts/: autonomy_enabler.py  debug_path_follower.py  dual_map_coverage_visualizer.py  frontier_explorer.py  frontier_recovery.py  gazebo_frontier_visual.py  geometric_frontier.py  goalpoint_to_waypoint.py  motion_monitor.py  pointcloud_adapter.py  qos_bridge.py  reactive_nav.py  robot_status_monitor.py  send_goal.py  simple_frontier_nav.py  simple_goal_follower.py  slam_odom_relay.py  stand_up_slowly.py  twist_bridge.py  wall_collision_checker.py  waypoint_follower.py
src/go2_gazebo_sim/scripts/reactive_nav_core/: __init__.py  config.py  controller.py  coordinator.py  geometry.py  perception.py  planner.py  recovery.py  state.py
src/go2_gazebo_sim/worlds/: 3.world  l_corridor.world  t_dual_corridor.world
tools/: clean_workspace.sh  smoke_check.sh  status_report.sh
